2006-09-15  Michael Schlenker <mic42@users.sourceforge.net>
        * ldapx.tcl     Imported some bug fixes from a new
          ldapx.man     version of ldapx by Pierre David.
          pkgIndex.tcl  Fixed bug in modifyDN, fixed wrong start
                        of SASL handshake, some mechanisms require
                        the client to send first.
          
2006-09-15  Michael Schlenker <mic42@users.sourceforge.net>
        * ldap.tcl      Fixed broken length calculation in message receiver.
          pkgIndex.tcl  This fixes bug [SF Tcllib Bug 1558564].
                        Fixed various smaller bugs with upvaring handles
                        in info functions.
                        Fixed wrong debug setting.
                        
2006-09-11  Michael Schlenker <mic42@users.sourceforge.net>
        * ldap.tcl      Fixed missing tlsHandshakeInProgress variable when
          ldap.man      when using ldap::connect.
          pkgIndex.tcl
          
2006-09-08  Michael Schlenker <mic42@users.sourceforge.net>

        * ldapx.tcl     New subpackage ldapx provides a snit
          ldapx.man     based OO wrapper around the ldap package.
          pkgIndex.tcl  Based on patch [SF Tcllib Patch 1545931]
                        by Pierre David <pdav@users.sourceforge.net>.
          
2006-09-01  Michael Schlenker <mic42@users.sourceforge.net>
        * ldap.tcl      Major changes to the implementation.
          ldap.man      The package now uses a fileevent based
          ldap.test     protocol handler instead of the older blocking
          pkgIndex.tcl  calls.
          SASL.txt
          
          ***POTENTIAL INCOMPATIBILITY***
          Connection failures are no longer handled in the blocking
          ldap::* commands, instead they appear in the fileevent handler
          and have to be handled with a bgerror procedure.
          
          I will add a per handle -errorcallback to the package soon, 