@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[comment {$Id: ldapx.man,v 1.2 2006/09/18 22:01:59 mic42 Exp $}]
-[manpage_begin ldapx n 0.2]
+[comment {$Id: ldapx.man,v 1.3 2006/09/19 22:46:06 mic42 Exp $}]
+[manpage_begin ldapx n 0.2.1]
 [copyright {2006 Pierre David <pdav@users.sourceforge.net>}]
 [moddesc   {LDAP extended object interface}]
 [titledesc {LDAP extended object interface}]
 [require Tcl 8.4]
-[require ldapx [opt 0.2]]
+[require ldapx [opt 0.2.1]]
 [description]
 [para]
 
